# Office-PowerPoint-MCP-Server

./: .env.example  .gitignore  README.md  S3_STORAGE_GUIDE.md  SECURITY_AUDIT_REPORT.md  __init__.py  ppt_mcp_server.py  ppt_utils.py  pyproject.toml  requirements.txt  setup_mcp.py  test_s3.py  test_security.py  点数ダミー.xlsx
tools/: __init__.py  content_tools.py  hyperlink_tools.py  presentation_tools.py  s3_tools.py  s3_xlsx_tools.py  structural_tools.py
utils/: __init__.py  aws_s3.py  content_utils.py  core_utils.py  presentation_utils.py  s3_utils.py
